--- a/menu.html
+++ b/menu.html
@@ -113,7 +113,7 @@
                     <li class="nav-item"><a class="nav-link mbr-fonts-style active show display-7" role="tab" data-toggle="tab" href="#tabs1-e_tab2" aria-selected="true">
                                 PARA COMER
                             </a></li>
-                    <li class="nav-item"><a class="nav-link mbr-fonts-style active show display-7" role="tab" data-toggle="tab" href="#tabs1-e_tab3" aria-selected="true">
+                    <li class="nav-item"><a class="nav-link mbr-fonts-style show active display-7" role="tab" data-toggle="tab" href="#tabs1-e_tab3" aria-selected="true">
                                 PARA BEBER
                             </a></li>
                     
@@ -489,7 +489,7 @@
                                 <div class="row align-items-start">
                                     <div class="col-md-4">
                                         <div class="image-wrap">
-                                            <img src="assets/images/delicious1.jpg" alt="">
+                                            <img src="assets/images/gaseosa-216x110.jpg" alt="" title="">
                                         </div>
                                     </div>
                                     <div class="col-md-8">
@@ -514,7 +514,7 @@
                                 <div class="row align-items-start">
                                     <div class="col-md-4">
                                         <div class="image-wrap">
-                                            <img src="assets/images/delicious1.jpg" alt="">
+                                            <img src="assets/images/smoothie-216x162.jpg" alt="" title="">
                                         </div>
                                     </div>
                                     <div class="col-md-8">
@@ -538,7 +538,7 @@
                                 <div class="row align-items-start">
                                     <div class="col-md-4">
                                         <div class="image-wrap">
-                                            <img src="assets/images/delicious1.jpg" alt="">
+                                            <img src="assets/images/licuados-216x121.jpg" alt="" title="">
                                         </div>
                                     </div>
                                     <div class="col-md-8">
@@ -1090,7 +1090,7 @@
                 <h3 class="form-title pb-3 mbr-fonts-style align-center display-5">
                     Contáctanos&nbsp;</h3>
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="NNFb9ExafgWkFTYuOOPV7Fi4dIcUFuxyKFILw2A/a0tQVsOnVvVEIYPMpHiLlEFRsdTNaLeJLFLTP9OqRQqNTYYzhuRxmhss2Wiop/JIuSBFwP4F3JNIrIQMJbpVAOwx" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="vkzi+RDLrmP2eVX0phoyjdz2fpoJD4V/DT2v5uTtc25MsJj7anqIHBYnfSLbHKYcTZm4kQmGkSQeT2ebuuSjybYSoWIr40Zm3OGxVAEvDt179Xl2cGy4kfMEdtw7Lduc" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-footer3-l">
                     </div>
