--- a/nosotros.html
+++ b/nosotros.html
@@ -126,7 +126,7 @@
                     <div class="media-container-row">
                         <div class="col-lg-6 image-element align-self-stretch">
                             <div class="img-wrap">
-                                <img src="assets/images/art-blur-brown-832820-1110x740.jpg" alt="" title="">
+                                <img src="assets/images/cafemanos-495x300.jpg" alt="" title="">
                             </div>
                         </div>
                         <div class="col-lg-6 text-element">
@@ -140,9 +140,7 @@
                                     </svg>
                                 </div>
                                 <div class="mbr-section-text">
-                                    <p class="mbr-text mbr-light mbr-fonts-style align-center display-7">
-                                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati qui labore laboriosam modi unde repellendus excepturi vero animi quis ea vitae laudantium non, illum eveniet, provident tenetur deserunt perspiciatis quo, amet delectus magni. Modi aut, vero quasi. Dolores sed totam, ipsa fugit provident aliquam quam.
-                                    </p>
+                                    <p class="mbr-text mbr-light mbr-fonts-style align-center display-7">Dar una nueva propuesta del servicio de A&amp;B de una manera profesional, impulsado el arte y la cultura guatemalteca en general. </p>
                                 </div>
                                 <div class="py-3 link">
                                   <a class="text-primary" href="">MORE DETAILS</a>
@@ -154,7 +152,7 @@
                     <div class="media-container-row">
                         <div class="col-lg-6 image-element align-self-stretch">
                             <div class="img-wrap">
-                                <img src="assets/images/cafemanos-495x300.jpg" alt="" title="">
+                                <img src="assets/images/artistic-beverage-cafe-357750-1110x740.jpg" alt="" title="">
                             </div>
                         </div>
                         <div class="col-lg-6 text-element">
@@ -168,9 +166,7 @@
                                     </svg>
                                 </div>
                                 <div class="mbr-section-text">
-                                    <p class="mbr-text mbr-light mbr-fonts-style align-center display-7">
-                                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati qui labore laboriosam modi unde repellendus excepturi vero animi quis ea vitae laudantium non, illum eveniet, provident tenetur deserunt perspiciatis quo, amet delectus magni. Modi aut, vero quasi. Dolores sed totam, ipsa fugit provident aliquam quam.
-                                    </p>
+                                    <p class="mbr-text mbr-light mbr-fonts-style align-center display-7">Ser una empresa reconocida a nivel nacional, porque se dedica principalmente a promover el arte de la preparación y el servicio de A&amp;B y la cultura guatemalteca en general.&nbsp;</p>
                                 </div>
                                 <div class="py-3 link">
                                   <a class="text-primary" href="">MORE DETAILS</a>
@@ -279,7 +275,7 @@
                 <h3 class="form-title pb-3 mbr-fonts-style align-center display-5">
                     Contáctanos&nbsp;</h3>
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="M7VlVm4TxVCQfG7upAnAalvMrPOJeZhqbrJSXR0TTzXoJWvY6Pi4ryE6XmNDcTt3FOAgW0cij1HIeU28GM3VZOikkKBE1hFy1uV0wHtE/DKbUvW6rcBaVUZpcp18Ae0v" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="fJ4hiOKeiAM1YG0RX4leIHG9+W9NNY6ct4P0IBldJ8mS3JH++vmSYkv59UhfmRFaog2W8zWsQcH1dW+zac1nPXzRU7i/4SbLa0wXKfBOdweVZfVaB6ZA7aWFBta/D7L3" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-footer3-12">
                     </div>
