--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
@@ -24,21 +25,6 @@
   
 </head>
 <body>
-
-<!-- Google Analytics -->
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120028147-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-120028147-1');
-</script>
-
-<!-- /Google Analytics -->
-
-
   <section class="menu cid-qTEWPC6lbA" once="menu" id="menu1-2">
 
     
@@ -59,7 +45,7 @@
             </div>
         </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="menu.html">MENU</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://espressarcafe.github.io/ofertas.html">OFERTAS</a></li>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">INICIO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="menu.html">MENU</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="eventos.html">EVENTOS</a>
                 </li>
@@ -270,7 +256,7 @@
                 <h3 class="form-title pb-3 mbr-fonts-style align-center display-5">
                     Contáctanos&nbsp;</h3>
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jzt/ztps9eJ02v3Dos3BPj8OmOU5hkGyYNVWDOoYJQuwiv9jVuNrB+f380rzsu8q7M6CGqjmcq3PalbMHIn/kwmO73uIM3afK5I8E5sci2gtY9fzxg9mocMWkacJggVf" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="3Y51WvppwZ6FyRvzXG7iJ7OqveiMN8n4FgPG5XexJ0NNy2wJLTPCIEurB8co0mZbha0K8C3GbT1oGQOw5P9KRPrsyszse0zQQz0OK1r7Q2GOYJnOwBjyN8CL3Z9jhjdp" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-footer3-7">
                     </div>
@@ -299,6 +285,7 @@
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/ytplayer/jquery.mb.ytplayer.min.js"></script>
   <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
   <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>
@@ -309,5 +296,6 @@
   <script src="assets/formoid/formoid.min.js"></script>
   
   
-</body>
+  <input name="animation" type="hidden">
+  </body>
 </html>
