--- a/page6.html
+++ b/page6.html
@@ -115,7 +115,7 @@
     
 </section>
 
-<section class="mbr-social-feed loading" id="feed-1d" data-facebook="https://www.facebook.com/espressarcafe/" data-twitter="" data-google="" data-posts="3" data-youtube="" data-rv-view="261" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-social-feed loading" id="feed-1i" data-facebook="https://www.facebook.com/espressarcafe/" data-twitter="" data-google="" data-posts="3" data-youtube="" data-rv-view="33" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     
     <img class="social-feed-container-loading" alt="" src="assets/images/loading.svg">
     <div class="social-feed-container">
@@ -195,7 +195,7 @@
                 <h3 class="form-title pb-3 mbr-fonts-style align-center display-5">
                     Contáctanos&nbsp;</h3>
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="QfJssE1E1OWnTxXf/CbJFLa7g5X7C8OXjjlIphb2UUhEvIZh758Jke1P7ykG9UxXneQfNIOUIMKLCT0Qfd80s7+ggn45pgGE0fGd22CjoSTikNPuZDBKRW4DsWeGPbpf" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="A4tt6lRpH2ACaZyTdOZ0BbmvkEoIXqmLcj3FfZ/NxuD9CsCI6yqzShIQzWkpOBKvnSlBir4oG2JVDOgFog8w9/d30DhbSIlu9Nv3KqatqJJSBb6cE3Z8n1MABad8umBI" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-footer3-1h">
                     </div>
