--- a/page6.html
+++ b/page6.html
@@ -115,8 +115,9 @@
     
 </section>
 
-<section class="mbr-social-feed loading" id="feed-1j" data-facebook="espressarcafe" data-twitter="" data-google="" data-posts="3" data-youtube="" data-rv-view="192" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
-    
+<section class="mbr-social-feed loading" id="feed-1k" data-facebook="https://www.facebook.com" data-twitter="" data-google="" data-posts="4" data-youtube="" data-rv-view="28" style="background-image: url(assets/images/comments-bg.jpg); padding-top: 0px; padding-bottom: 0px;">
+    <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(126, 155, 159);">
+    </div>
     <img class="social-feed-container-loading" alt="" src="assets/images/loading.svg">
     <div class="social-feed-container">
     </div>
@@ -195,7 +196,7 @@
                 <h3 class="form-title pb-3 mbr-fonts-style align-center display-5">
                     Contáctanos&nbsp;</h3>
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="n3J6qepLTRb4DZyjyuTW6/qtZSU26rPofHKbW865MCOjiW29zv7mbJ1M1wH0wu5a8IT3bhQJiYfKFBqNbgA/Ys8nnT8vgOUjWz3VNkOx96xdBaaU22Slm92Z6mcPEgf4" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="v6PA59gZWgxZ4BmnTxgVGaoPrVviW2h0WIzctqiuGH1vAXP/Q6BTVMsphlPq/fq45CELgBQFcvaWGs1j66O2gCHKbe5/JGXozc6O1YQjOFjzupcoATRmKTtdsfbxOg4r" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-footer3-1h">
                     </div>
