--- a/contactos.html
+++ b/contactos.html
@@ -122,8 +122,8 @@
         <div class="row content justify-content-center align-items-start mbr-white">
             <div class="col-12 col-md-6 col-lg-4 pb-3">
                 <div class="logo pb-3 align-center">
-                    <a href="https://mobirise.com">
-                        <img src="assets/images/logo2.png" alt="Mobirise" style="height: 5rem;">
+                    <a href="index.html">
+                        <img src="assets/images/logo2.png" alt="Mobirise" title="" style="height: 5rem;">
                     </a>
                 </div>
                 <div class="social-list pb-3 align-center">
@@ -186,7 +186,7 @@
             <div class="form-1 col-sm-12 col-md-5 col-xl-4 col-lg-3" data-form-type="formoid">
                 <h3 class="form-title pb-3 mbr-fonts-style align-center display-5">Contáctanos&nbsp;</h3>
                 <div data-form-alert="" hidden="">¡Gracias por completar el formulario!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="O6knul5HOlrUVroQKaqR0aCFJ3anwCGGK5k8/3OIMPi6dGYXp0hbahmvdvU6rasBvcwVA57xz4xOvt87N/asR3YoKFIc02naIcaJZr0cTRWhRgB64o3fRWw3zCjodtui" data-form-field="E-mail">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="WU/mi+4z5HmR6Ved9O5wHX75Ni0WMj4D0sndhv/1v2VgyX3Q71kUCHlwiLOOeSA64ewvSchayYSquI7HCSnYur57uDyo2cZyd7cZb4qTa9l7mecM95CK5PulAHAcRzU2" data-form-field="E-mail">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" placeholder="Nombre" data-form-field="Name" required="" id="name-footer4-r">
                     </div>
